--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,5 +3,5 @@
 
 @theme inline {
     --font-roboto: var(--font-roboto);
-    --color-azul-personalizado: #1E40AF;
+    --color-azul-personalizado: #014005;
 }
