update: footer and nav changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,8 @@
 }
 
 @theme {
-    --color-green-1: #cdf7d6;
+    --color-custom-light-green: #cdf7d6;
+    --color-custom-dark-green: #204525;
 }
 
 /* css pro botão de pin do mapa */
