add: hero section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,10 @@
 
 @theme {
     --color-custom-light-green: #cdf7d6;
+    --color-custom-light-green-2: #8eed93;
     --color-custom-dark-green: #204525;
+
+    --color-custom-yellow: #fff454;
 }
 
 /* css pro botão de pin do mapa */
