update: added lines section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
     --color-custom-light-green: #cdf7d6;
     --color-custom-light-green-2: #8eed93;
     --color-custom-dark-green: #204525;
-
+    --color-custom-light-yellow: #fffab8;
     --color-custom-yellow: #fff454;
 }
 
