--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,3 +28,17 @@
     background-color: #f3f4f6 !important;
     cursor: pointer;
 }
+
+
+.three-part-bg {
+    @media (width >= 48rem /* 768px */) {
+        background-image: linear-gradient(
+            to right,
+            #FEF7DA 20%,  /* Yellow from the start (0%) to 20% */
+            white 20%,    /* White from 20% ... */
+            white 80%,    /* ... to 80% */
+            #FEF7DA 80%   /* Yellow from 80% to the end (100%) */
+        );
+    }
+
+}
