update: hero section fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
 @theme {
     --color-custom-light-green: #c7ffcb;
     --color-custom-light-green-2: #8eed93;
-    --color-custom-dark-green: #2c5e30;
+    --color-custom-dark-green: #204525;
     --color-custom-light-yellow: #fffab8;
     --color-custom-yellow: #fff454;
 }
